tests/typing/errors/shadow/builtin-sort.expected
File "tests/typing/errors/shadow/builtin-sort.smt2", line 3, character 0-21:
3 | (declare-sort Bool 0)
    ^^^^^^^^^^^^^^^^^^^^^
Error Duplicate declaration of `Bool`, which is already defined by a builtin theory
